# Zero_knowledge_proof

./: .gitignore  .gitmodules  CMakeLists.txt  Logging.jsonl  README.md  client.hpp  curve.hpp  header.hpp  main.cpp  point.hpp  server.hpp  test.cpp
demonstration/: attacker.css  attacker.html  main.css  main.html  prover.css  prover.html
documentation/: annotated.html  attacker_8hpp_source.html  class_attacker-members.html  class_attacker.html  class_client-members.html  class_client__inherit__graph.dot  class_curve.html  class_point-members.html  classes.html  client_8hpp_source.html  dir_0e25b115729b9866ba00c6f90ca13748.html  dir_23054a6040da26d3b220cf9d52461959.html  doxygen.css  files.html  functions_func.html  header_8hpp_source.html  hierarchy.html  inherit_graph_0.dot  inherit_graph_1.dot  inherits.html  logging_8hpp_source.html  md__r_e_a_d_m_e.html  pages.html  point_8hpp_source.html  server_8hpp_source.html
documentation/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js
html/: annotated.html  attacker_8hpp_source.html  class_attacker-members.html  class_attacker.html  class_attacker__inherit__graph.dot  class_client-members.html  class_client.html  class_client__inherit__graph.dot  class_curve-members.html  class_curve.html  class_point-members.html  class_point.html  classes.html  client_8hpp_source.html  curve_8hpp_source.html  dir_23054a6040da26d3b220cf9d52461959.html  files.html  functions.html  functions_func.html  graph_legend.html  header_8hpp_source.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherits.html  logging_8hpp_source.html  point_8hpp_source.html  server_8hpp_source.html
html/search/: all_1.js  all_4.js  functions_0.js  functions_3.js  search.css
realization/: attacker.hpp  client.hpp  curve.hpp  header.hpp  logging.hpp  main.cpp  point.hpp  server.hpp  test.cpp
realization/cpp/: attacker.cpp  client.cpp  logging.cpp  point.cpp  server.cpp
realization/hpp/: attacker.hpp  client.hpp  curve.hpp  header.hpp  logging.hpp  point.hpp  server.hpp
